# amazon_scrapper

./: .gitignore  README.md  logger.py  requirements.txt  setup.cfg
amazon_scraper/: searching.py
amazon_scraper/utils/: __init__.py  amazon.py  common.py  selenium_utils.py
notebooks/: first.csv  first.json  keyboard.json  logger.py  main.ipynb  t.ipynb
notebooks/utils/: amazon.py  common.py  selenium_utils.py
