[metadata]
name = amazon-scraper
version = 0.1.0
author = Md Abdullah Al Mamun
description = A web scraper for Amazon product data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/amazon_scraper
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
install_requires =
    selenium
    beautifulsoup4
    pandas
    openpyxl
python_requires = >=3.7
